# data_harvest

./: Cargo.toml  README.md
examples/: simple_check.rs
src/: lib.rs
src/domain/: errors.rs  short_position.rs
src/feeders/: ibex_short_provider.rs
src/web_scrappers/: cnmv_scrapper.rs
test/fixtures/: invalid_short_response.html  invalid_short_response_unknown_error.html  valid_short_response.html  valid_short_response_puig.html
