[package]
name = "data_harvest"
version = "0.2.0"
edition = "2021"
authors = ['Felipe Torres González']
description = "A library that harvests finance data from the Web."
repository = "https://github.com/felipet/data_harvest"
license = "MPL-2.0"
keywords = ['ibex35', 'finance', 'data_harvest', 'quantum']
categories = ['finance']

[dependencies]
chrono = { version = "0.4.38", features = ["alloc", "std", "clock"] }
finance_api = "0.1.0"
finance_ibex = "0.1.0-beta1"
log = "0.4.21"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
rstest = "0.24.0"
scraper = "0.18.1"
tracing = "0.1.41"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono"] }
thiserror = "2.0.11"
uuid = { version = "1.13.1", features = ["v4"] }
regex = "1.11.1"
once_cell = "1.20.3"

[dev-dependencies]
tokio = {version = "1.43.0", features = ["rt-multi-thread", "macros"]}
